--- a/multiprocessing_notes.ipynb
+++ b/multiprocessing_notes.ipynb
@@ -80,6 +80,7 @@
    "source": [
     "num_ROIs = 7\n",
     "# num_frames = 600\n",
+    "# num_frames = 50\n",
     "num_frames = 10\n",
     "\n",
     "# Create a shared array of 7*600=4200 int16 values\n",
