make the same update to the Jupyter notebook

--- a/multiprocessing_notes.ipynb
+++ b/multiprocessing_notes.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "    shared_np_arr = np.frombuffer(shared_buffer.get_obj(), dtype=np.int16).reshape(num_ROIs, num_frames)\n",
     "    \n",
-    "    shared_np_arr[:, frame_num] = frame_num"
+    "    shared_np_arr[:, frame_num] = frame_num + 1"
    ]
   },
   {
