--- a/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
+++ b/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "h2q27gKz1H20"
@@ -11,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
         "id": "TUfAcER1oUS6"
@@ -32,6 +33,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "L_cQX8dWu4Dv"
@@ -43,6 +45,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "O6PN9FvIx614"
@@ -55,16 +58,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Name: mediapipe\n",
+            "Version: 0.10.0\n",
+            "Summary: MediaPipe is the simplest way for researchers and developers to build world-class ML solutions and applications for mobile, edge, cloud and the web.\n",
+            "Home-page: https://github.com/google/mediapipe\n",
+            "Author: The MediaPipe Authors\n",
+            "Author-email: mediapipe@google.com\n",
+            "License: Apache 2.0\n",
+            "Location: c:\\users\\muhsinun\\desktop\\muhsinun\\repositories\\github\\facial-bloodflow-tof_live\\.env\\lib\\site-packages\n",
+            "Requires: absl-py, attrs, flatbuffers, matplotlib, numpy, opencv-contrib-python, protobuf, sounddevice\n",
+            "Required-by: \n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip show mediapipe"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "gxbHBsF-8Y_l"
       },
       "outputs": [],
       "source": [
-        "!pip install -q mediapipe==0.10.0"
+        "# !pip install -q mediapipe==0.10.0"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "a49D7h4TVmru"
@@ -85,6 +115,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "YYKAJ5nDU8-I"
@@ -170,6 +201,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "83PEJNp9yPBU"
@@ -198,6 +230,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "u-skLwMBmMN_"
@@ -228,6 +261,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Iy4r2_ePylIa"
@@ -273,44 +307,46 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "We will also visualize the face blendshapes categories using a bar graph."
-      ],
       "metadata": {
         "id": "lKelLdIfwL4V"
-      }
+      },
+      "source": [
+        "We will also visualize the face blendshapes categories using a bar graph."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "plot_face_blendshapes_bar_graph(detection_result.face_blendshapes[0])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "l0id2t5Vl83m"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "plot_face_blendshapes_bar_graph(detection_result.face_blendshapes[0])"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "And print the transformation matrix."
-      ],
       "metadata": {
         "id": "ckKurV96cG01"
-      }
+      },
+      "source": [
+        "And print the transformation matrix."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(detection_result.facial_transformation_matrixes)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "xixKF10-rmse"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(detection_result.facial_transformation_matrixes)"
+      ]
     }
   ],
   "metadata": {
@@ -332,7 +368,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.13"
+      "version": "3.10.10"
     }
   },
   "nbformat": 4,
