--- a/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
+++ b/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "TUfAcER1oUS6"
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -105,13 +105,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "OMjuVQiDYJKF"
       },
       "outputs": [],
       "source": [
-        "!wget -O face_landmarker_v2_with_blendshapes.task -q https://storage.googleapis.com/mediapipe-models/face_landmarker/face_landmarker/float16/1/face_landmarker.task"
+        "# !wget -O face_landmarker_v2_with_blendshapes.task -q https://storage.googleapis.com/mediapipe-models/face_landmarker/face_landmarker/float16/1/face_landmarker.task"
       ]
     },
     {
