save another wget

--- a/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
+++ b/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "s3E6NFV-00Qt"
       },
@@ -220,7 +220,7 @@
       },
       "outputs": [],
       "source": [
-        "!wget -q -O image.jpg https://storage.googleapis.com/mediapipe-assets/portrait.jpg\n",
+        "# !wget -q -O image.jpg https://storage.googleapis.com/mediapipe-assets/portrait.jpg\n",
         "\n",
         "import cv2\n",
         "from google.colab.patches import cv2_imshow\n",
