rewrote cv2_imshow() to make it work outside of Google Colab

--- a/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
+++ b/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
@@ -123,7 +123,7 @@
           "data": {
             "text/plain": [
               "('face_landmarker_v2_with_blendshapes.task',\n",
-              " <http.client.HTTPMessage at 0x22699a74340>)"
+              " <http.client.HTTPMessage at 0x1e16f234280>)"
             ]
           },
           "execution_count": 5,
@@ -238,6 +238,21 @@
     {
       "cell_type": "code",
       "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import cv2\n",
+        "\n",
+        "def cv2_imshow(img, window_name=\"Image Window\"):\n",
+        "    \"\"\"Convenience function to show an image\"\"\"\n",
+        "    cv2.imshow(window_name, img)\n",
+        "    cv2.waitKey(0)\n",
+        "    cv2.destroyAllWindows()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "tzXuqyIBlXer"
       },
@@ -254,20 +269,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import cv2\n",
-        "\n",
         "# Download the image\n",
         "urllib.request.urlretrieve(\"https://storage.googleapis.com/mediapipe-assets/portrait.jpg\", \"image.jpg\")\n",
         "\n",
-        "# Load and display the image using OpenCV\n",
         "img = cv2.imread(\"image.jpg\")\n",
-        "cv2.imshow(\"Image\", img)\n",
-        "cv2.waitKey(0)\n",
-        "cv2.destroyAllWindows()"
+        "cv2_imshow(img)"
       ]
     },
     {
@@ -282,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "etBjSdwImQPw"
       },
@@ -317,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {
         "id": "_JVO3rvPD4RN"
       },
@@ -349,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -374,12 +384,7 @@
         "\n",
         "# STEP 5: Process the detection result. In this case, visualize it.\n",
         "annotated_image = draw_landmarks_on_image(image.numpy_view(), detection_result)\n",
-        "\n",
-        "# Display the annotated image\n",
-        "# cv2_imshow(cv2.cvtColor(annotated_image, cv2.COLOR_RGB2BGR))\n",
-        "cv2.imshow(\"Landmarks\", cv2.cvtColor(annotated_image, cv2.COLOR_RGB2BGR))\n",
-        "cv2.waitKey(0)\n",
-        "cv2.destroyAllWindows()"
+        "cv2_imshow(cv2.cvtColor(annotated_image, cv2.COLOR_RGB2BGR))"
       ]
     },
     {
@@ -394,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
         "id": "l0id2t5Vl83m"
       },
@@ -426,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {
         "id": "xixKF10-rmse"
       },
